# ansible-role-shade

./: .zuul.yaml  ChangeLog  README.md  README.rst  bindep.txt  setup.cfg
defaults/: main.yaml
meta/: main.yml
tasks/: install.yaml  main.yaml
tasks/install/: git.yaml  pip.yaml
tests/: test.yaml
tests/playbooks/: pre.yaml  run.yaml
vars/: Debian.yaml  RedHat.yaml
